--- a/ClubDeportivo/ClubDeportivo.csproj
+++ b/ClubDeportivo/ClubDeportivo.csproj
@@ -83,6 +83,18 @@
     <Compile Include="Formularios\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\SociosForms\InvitadoNI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\SociosForms\InvitadoNI.Designer.cs">
+      <DependentUpon>InvitadoNI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\SociosForms\SocioNI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\SociosForms\SocioNI.Designer.cs">
+      <DependentUpon>SocioNI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Formularios\frmDefunciones.resx">
@@ -102,6 +114,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmTarifas.resx">
       <DependentUpon>frmTarifas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\SociosForms\InvitadoNI.resx">
+      <DependentUpon>InvitadoNI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\SociosForms\SocioNI.resx">
+      <DependentUpon>SocioNI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
