--- a/ClubDeportivo/ClubDeportivo.csproj
+++ b/ClubDeportivo/ClubDeportivo.csproj
@@ -294,6 +294,22 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Image\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo-design-golden-ratio-infinity.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\0-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fondo login.jpg" />
+    <Content Include="Resources\Icono.ico" />
+    <None Include="Resources\LOGO PIRATA.png" />
+    <None Include="Resources\Label1.png" />
+    <Content Include="Resources\pngtransparente.png" />
+    <None Include="Resources\pngtransparente1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
