--- a/ClubDeportivo/packages.config
+++ b/ClubDeportivo/packages.config
@@ -3,19 +3,29 @@
   <package id="itext" version="8.0.3" targetFramework="net472" />
   <package id="itext.commons" version="8.0.3" targetFramework="net472" />
   <package id="itext7" version="8.0.3" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
-  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Console" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="PDFsharp" version="6.1.0-preview-1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.0-preview.1.24080.9" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
