CAMBIOS JALANDO DE TARIFAS Y DE RECIBOS, Y ACTULIZA CON EL BOTON GUARDAR DE RECIBOS SOLO FALTAN EXPECIONES

--- a/ClubDeportivo/ClubDeportivo.csproj
+++ b/ClubDeportivo/ClubDeportivo.csproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <Compile Include="Clases\Defuncion.cs" />
     <Compile Include="Clases\Pago.cs" />
+    <Compile Include="Clases\SQLRecibos.cs" />
     <Compile Include="Clases\SQLSocios.cs" />
     <Compile Include="Clases\PDF.cs" />
     <Compile Include="Clases\SQLSocios.cs" />
